Added more discussion.

--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -2250,24 +2250,45 @@
     "provides an intercept value, which tends to produce a spread series with a mean of zero. Higher cointegration confidence intervals do\n",
     "not deliver higher serial cointegration, so a simple test for a non-zero confidence interval can be used.\n",
     "</p>\n",
-    "<h2>\n",
-    "Pairs Trading and the Problems of Mathematical Finance\n",
-    "</h2>\n",
+    "<h3>\n",
+    "An Algorithm of Selecting Pairs\n",
+    "</h3>\n",
     "<p>\n",
-    "Mathematical finance often assumes normal distributions and statistics that are constant (constant mean and standard deviation, for example).\n",
-    "If the assumptions involving constant statistics were actually true, it would be much easier to make money (except for the fact that mathematical\n",
-    "finance would assume that these opportunities would have already been arbitraged out).\n",
+    "Based on the statistical observation from the data above, I can propose the following algorithm to select pairs. These criteria\n",
+    "are applied to the in-sample data (the past half year). Trading takes place in the next time period (the out-of-sample) period.\n",
     "</p>\n",
     "<p>\n",
-    "The statistics examined in this notebook are not constant. There are wide variations in correlation between time periods. Cointegration is also\n",
-    "not constant from one time period to another. In fact, in 60% of the cases a pair that is cointegrated in one time period is not cointegrated in\n",
-    "the following time period.\n",
+    "A three month trading period is used. This time period, rather than a six month time period, is chosen because a shorter time period\n",
+    "is more likely to have consistent statistics with the in-sample time period. A shorter time period also allows the statistical tests\n",
+    "to be run more often. The shorter time period limits the time that pairs are held. An open pair position that does not mean revert will\n",
+    "be closed at the end of the three month trading period.\n",
+    "</p>\n",
+    "<ol>\n",
+    "<li>\n",
+    "Filter pairs for high correlation\n",
+    "</li>\n",
+    "<li>\n",
+    "Use the Granger test to identify pairs that are cointegrated (at any confidence level)\n",
+    "</li>\n",
+    "</ol>\n",
+    "<p>\n",
+    "After selecting highly correlated, cointegrated pairs there will (historically) be between 700 and 1500 pairs, which are far more than\n",
+    "can be traded by a retail trader.  To reduce the number of pairs the following additional filters are applied.\n",
+    "</p>\n",
+    "<ol>\n",
+    "<li>\n",
+    "Select the top N pairs by the volatility of the pair spread (sorted by high volatility).\n",
+    "</li>\n",
+    "<li>\n",
+    "Select the top M pairs by halflife of the pair spread (sorted by low halflife).\n",
+    "</li>\n",
+    "</ol>\n",
+    "<p>\n",
+    "High volatility pairs are selected based on the speculation that these stocks will yield the highest profit.\n",
     "</p>\n",
     "<p>\n",
-    "The mathematical finance papers on mean reversion are written for a world where the spread between two mean reverting assets is a stationary\n",
-    "Ornstein-Uhlenbeck process. This world may exist looking backward at in-sample data. For out-of-sample data, these statistics break down, as\n",
-    "demonstrated in this paper. The statistical characteristics of the past in-sample period often do not describe the out-of-sample trading period.\n",
-    "</p>"
+    "Pairs with short halflives may have more rapid mean reversion, providing more trading opportunities.\n",
+    "</p>\n"
    ],
    "metadata": {
     "collapsed": false
@@ -2278,7 +2299,15 @@
    "source": [
     "<h2>\n",
     "Halflife for a Mean Reverting Ornstein – Uhlenbeck Process\n",
-    "</h2>"
+    "</h2>\n",
+    "<p>\n",
+    "A Ornstein – Uhlenbeck process is a random walk process with a tendency to move back toward the mean. Half-life of the mean-reversionis the\n",
+    "average time it will take the process to get pulled half-way back to the mean.\n",
+    "</p>\n",
+    "<p>\n",
+    "Cointegration from one time period to the next happens in only about 40% of the cointegrated pairs. This suggests that half-life will also\n",
+    "be unstable between time periods.\n",
+    "</p>"
    ],
    "metadata": {
     "collapsed": false
@@ -2310,23 +2339,34 @@
     "    halflife_i = int(round(halflife_f))\n",
     "    return halflife_i\n",
     "\n",
-    "\n",
-    "def half_life_ep_chan(spread_df: np.array) -> int:\n",
-    "    \"\"\"\n",
-    "    This half-life calculation may not be correct\n",
-    "    :param spread_df:\n",
-    "    :return:\n",
-    "    \"\"\"\n",
-    "    spread_prev = spread_df.shift()\n",
-    "    spread_ret = spread_df - spread_prev\n",
-    "    spread_ret = spread_ret[1:,]\n",
-    "    model2 = sm.OLS(spread_ret, spread_prev - np.mean(spread_prev))\n",
-    "    results2 = model2.fit()\n",
-    "    theta = results2.params\n",
-    "    halflife = -np.log(2)/theta\n",
-    "    halflife_i = int(round(halflife))\n",
-    "    return halflife_i\n"
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<h2>\n",
+    "Pairs Trading and the Problems of Mathematical Finance\n",
+    "</h2>\n",
+    "<p>\n",
+    "Mathematical finance often assumes normal distributions and statistics that are constant (constant mean and standard deviation, for example).\n",
+    "If the assumptions involving constant statistics were actually true, it would be much easier to make money (except for the fact that mathematical\n",
+    "finance would assume that these opportunities would have already been arbitraged out).\n",
+    "</p>\n",
+    "<p>\n",
+    "The statistics examined in this notebook are not constant. There are wide variations in correlation between time periods. Cointegration is also\n",
+    "not constant from one time period to another. In fact, in 60% of the cases a pair that is cointegrated in one time period is not cointegrated in\n",
+    "the following time period.\n",
+    "</p>\n",
+    "<p>\n",
+    "The mathematical finance papers on mean reversion are written for a world where the spread between two mean reverting assets is a stationary\n",
+    "Ornstein-Uhlenbeck process. This world may exist looking backward at in-sample data. For out-of-sample data, these statistics break down, as\n",
+    "demonstrated in this paper. The statistical characteristics of the past in-sample period often do not describe the out-of-sample trading period.\n",
+    "</p>"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
