Fixed a bug in the stock filtering code.

--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -251,7 +251,8 @@
     "# Apply the default theme\n",
     "sns.set_theme()\n",
     "\n",
-    "s_and_p_file = 's_and_p_sector_components/sp_stocks.csv'\n",
+    "from s_and_p_filter import s_and_p_directory, s_and_p_stock_file\n",
+    "s_and_p_file = s_and_p_directory + os.path.sep + s_and_p_stock_file\n",
     "s_and_p_data = 's_and_p_data'\n",
     "start_date_str = '2007-01-03'\n",
     "start_date: datetime = datetime.fromisoformat(start_date_str)\n",
