--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -2112,8 +2112,10 @@
   {
    "cell_type": "markdown",
    "source": [
+    "<p>\n",
     "The table below shows the relationship between cointegration in the in-sample six month period and cointegration in the six month out of\n",
-    "sample (trading) period."
+    "sample (trading) period.\n",
+    "</p>"
    ],
    "metadata": {
     "collapsed": false
@@ -2186,9 +2188,13 @@
   {
    "cell_type": "markdown",
    "source": [
+    "<p>\n",
     "The table below shows the relationship between the cointegration confidence intervals in the in-sample period and\n",
-    "cointegration in the out-of-sample trading period. This table provides information on whether higher confidence\n",
-    "in cointegration provides better predictive power for the out-of-sample period."
+    "cointegration in the out-of-sample trading period.\n",
+    "</p>\n",
+    "<p>\n",
+    "The results in this table show that the in-sample confidence interval does not seem to predict out-of-sample cointegration.\n",
+    "</p>"
    ],
    "metadata": {
     "collapsed": false
@@ -2415,15 +2421,32 @@
    "source": [
     "<p>\n",
     "I am skeptical about the validity of the half-life statistics.  The histogram plot shows most of the half-life values clustered around 4.\n",
-    "I would have more confidence in a distribution that included a wider range of values is less skewed.\n",
+    "I would have more confidence in a distribution that included a wider range of values that are less skewed.\n",
     "</p>\n",
     "<p>\n",
     "The half-life statistic may be useful in weeding out problematic spread time series. For example, a spread with a negative half-life can\n",
-    "probably be discarded. Similarly, a half-life greater than 10 could also be discarded.\n",
+    "be discarded. Similarly, a half-life greater than 10 could also be discarded.\n",
     "</p>\n",
-    "<h3>\n",
+    "<h2>\n",
+    "Pairs Trading and Delusions in Mathematical Finance\n",
+    "</h2>\n",
+    "<p>\n",
+    "Mathematical finance often assumes normal distributions and statistics that are constant (constant mean and standard deviation, for example).\n",
+    "If these assumptions involving the statistics of financial data were actually true, it would be much easier to make money\n",
+    "(except for the fact that mathematical finance would assume that these opportunities would have already been arbitraged out).\n",
+    "</p>\n",
+    "<p>\n",
+    "The assumptions made in mathematical finance often exist because these assumptions allow closed form (e.g., equation based) solutions\n",
+    "to finance problems. The fact that these assuptions are wrong in most cases is often ignored.\n",
+    "</p>\n",
+    "<p>\n",
+    "The correlation and cointegration statistics are not constant between the in-sample and out-of-sample periods. There are wide variations\n",
+    "in correlation between time periods. Cointegration is also not constant from one time period to another. In fact, in 60% of the cases\n",
+    "a pair that is cointegrated in one time period is not cointegrated in the following time period.\n",
+    "</p>\n",
+    "<h2>\n",
     "An Algorithm of Selecting Pairs\n",
-    "</h3>\n",
+    "</h2>\n",
     "<p>\n",
     "Based on the statistical observation from the data above, I can propose the following algorithm to select pairs. These criteria\n",
     "are applied to the in-sample data (the past half year). Trading takes place in the next time period (the out-of-sample) period.\n",
@@ -2434,9 +2457,34 @@
     "to be run more often. The shorter time period limits the time that pairs are held. An open pair position that does not mean revert will\n",
     "be closed at the end of the three month trading period.\n",
     "</p>\n",
+    "<p>\n",
+    "On average only 40% of the pairs that are cointegrated in the in-sample time period will be co-integrated in the out-of-sample\n",
+    "time period (e.g., the trading period). This suggests that a sufficient number of pairs must be traded to take advantage of\n",
+    "the 40% cointegration that can be expected.\n",
+    "</p>\n",
+    "<p>\n",
+    "For 60% of the pairs traded (on average) there will not be cointegration and mean reversion in the out-of-sample trading period.\n",
+    "In order for the pairs trading strategy to be successful the profit from the mean reverting pairs must be higher\n",
+    "than the losses from the pairs that do not mean revert.\n",
+    "A market neutral weighting is used for all of the pairs that are traded, so there is some reason to expect that the pairs that\n",
+    "do not mean will have, on average, a return near zero.\n",
+    "</p>\n",
+    "<p>\n",
+    "The pairs trading strategy seeks to profit from the pairs that mean revert on average 40% of the time (while the other pairs are,\n",
+    "we hope, market neutral).  This suggests that the strategy will do better if we make lots of small \"bets\" (perhaps trading\n",
+    "100 pairs). Making lots of small bets also reduces the risk from company factors. For example, if one of the pairs selected included\n",
+    "Tesla (TSLA) there could be losses due to the post Twitter purchase \"Elon Musk factor\". However, if the investment in the pair is small\n",
+    "the loss would also be small.\n",
+    "</p>\n",
+    "<p>\n",
+    "The algorithm for pairs trading is outlined below.\n",
+    "</p>\n",
     "<ol>\n",
     "<li>\n",
-    "Filter pairs for high correlation\n",
+    "Select pairs from an S&P 500 industry sector.\n",
+    "</li>\n",
+    "<li>\n",
+    "Filter pairs for high correlation (correlation greater than or equal to 0.75).\n",
     "</li>\n",
     "<li>\n",
     "Use the Granger test to identify pairs that are cointegrated (at any confidence level)\n",
@@ -2464,32 +2512,6 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "<h2>\n",
-    "Pairs Trading and the Problems of Mathematical Finance\n",
-    "</h2>\n",
-    "<p>\n",
-    "Mathematical finance often assumes normal distributions and statistics that are constant (constant mean and standard deviation, for example).\n",
-    "If the assumptions involving constant statistics were actually true, it would be much easier to make money (except for the fact that mathematical\n",
-    "finance would assume that these opportunities would have already been arbitraged out).\n",
-    "</p>\n",
-    "<p>\n",
-    "The statistics examined in this notebook are not constant. There are wide variations in correlation between time periods. Cointegration is also\n",
-    "not constant from one time period to another. In fact, in 60% of the cases a pair that is cointegrated in one time period is not cointegrated in\n",
-    "the following time period.\n",
-    "</p>\n",
-    "<p>\n",
-    "The mathematical finance papers on mean reversion are written for a world where the spread between two mean reverting assets is a stationary\n",
-    "Ornstein-Uhlenbeck process. This world may exist looking backward at in-sample data. For out-of-sample data, these statistics break down, as\n",
-    "demonstrated in this paper. The statistical characteristics of the past in-sample period often do not describe the out-of-sample trading period.\n",
-    "</p>"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "\n",
@@ -2504,45 +2526,58 @@
     "Algorithmic Trading: Winning Strategies and Their Rationale by Ernie Chan, 2013, Wiley Publishing\n",
     "</li>\n",
     "<li>\n",
+    "<p>\n",
     "<a href=\"https://medium.com/@financialnoob/granger-causality-test-in-pairs-trading-bf2fd939e575\">Granger causality test in pairs trading</a> by\n",
-    "Alexander Pavlov (behind the Medium paywall)\n",
-    "</li>\n",
-    "<li>\n",
-    "<a href=\"https://letianzj.github.io/cointegration-pairs-trading.html\">Quantitative Trading and Systematic Investing by Letian Wang</a> This\n",
-    "post includes a discussion on how the results of Johansen cointegration can be interpreted.\n",
-    "</li>\n",
-    "<li>\n",
-    "<a href=\"https://www.quantrocket.com/codeload/quant-finance-lectures/quant_finance_lectures/Lecture42-Introduction-to-Pairs-Trading.ipynb.html\">Introduction to Pairs Trading</a> by Delaney Mackenzie and Maxwell Margenot\n",
-    "</li>\n",
-    "<li>\n",
-    "<p>\n",
-    "<a href=\"https://quantdevel.com/pdf/betterHedgeRatios.pdf\">Better Hedge Ratios for Spread Trading</a>, by Paul Teetor, November 2011\n",
+    "Alexander Pavlov (behind the Medium paywall).\n",
     "</p>\n",
     "<p>\n",
-    "This note discusses the problem of using ordinary least squares to produce a hedge ratio.\n",
+    "In this paper the Granger causality test is used to select stocks from the VBR Small-Cap ETF. The result is a yearly return of about\n",
+    "28% and a Sharpe ratio of 1.7.\n",
     "</p>\n",
     "</li>\n",
     "<li>\n",
-    "<a href=\"http://jonathankinlay.com/2019/02/pairs-trading-part-2-practical-considerations/\">Pairs Trading – Part 2: Practical Considerations</a> by Jonathan Kinlay  This is a practitioners view of pairs trading.\n",
+    "<p>\n",
+    "<a href=\"https://letianzj.github.io/cointegration-pairs-trading.html\">Quantitative Trading and Systematic Investing by Letian Wang</a>\n",
+    "</p>\n",
+    "<p>\n",
+    "This post includes a discussion on how the results of Johansen cointegration can be interpreted.\n",
     "</li>\n",
     "<li>\n",
-    "<a href=\"https://www.quantconnect.com/tutorials/strategy-library/intraday-dynamic-pairs-trading-using-correlation-and-cointegration-approach\">Intraday Dynamic Pairs Trading using Correlation and Cointegration</a> This is a QuantConnect article on mean reversion and cointegration with Python examples.\n",
+    "<p>\n",
+    "<a href=\"http://jonathankinlay.com/2019/02/pairs-trading-part-2-practical-considerations/\">Pairs Trading – Part 2: Practical Considerations</a> by Jonathan Kinlay  This is a practitioners view of pairs trading. (email: jkinlay@gmail.com)\n",
+    "</p>\n",
+    "<p>\n",
+    "This post discusses some of the challenges and pitfalls in pairs trading.\n",
+    "</p>\n",
     "</li>\n",
     "<li>\n",
+    "<p>\n",
     "<a href=\"https://www.sciencedirect.com/science/article/pii/S037843712100964X\">Applying Hurst Exponent in pair trading strategies\n",
     "on Nasdaq 100 index</a>\n",
-    "by Quynh Bui and Robert Ślepaczuk  This article shows that filtering pairs using the Hurst exponent value is superior to using\n",
-    "cointegration. A number of other articles suggest that cointegration is superior to Hurst.\n",
+    "by Quynh Bui and Robert Ślepaczuk\n",
+    "</p>\n",
+    "<p>\n",
+    "The results in this article show that filtering pairs using the Hurst exponent value is superior to using\n",
+    "cointegration. I've included this article in the references because it contradicts many articles that use\n",
+    "cointegration. The overall results of unleveraged pairs trading shown in this article are poor.\n",
+    "</p>\n",
     "</li>\n",
     "<li>\n",
+    "<p>\n",
     "<a href=\"https://www.sciencedirect.com/science/article/pii/S2214845021000880\">Pairs trading: is it applicable to exchange-traded funds?</a>\n",
+    "</p>\n",
+    "<p>\n",
+    "This article looks at pairs trading of ETFs. Some authors have suggested that cointegration is more persistent with ETFs.\n",
+    "</p>\n",
     "</li>\n",
     "<li>\n",
-    "<a href=\"https://hudsonthames.org/an-introduction-to-cointegration/\">An Introduction to Cointegration for Pairs Trading By Yefeng Wang</a>\n",
-    "</li>\n",
-    "<li>\n",
+    "<p>\n",
     "<a href=\"https://www.inf.ovgu.de/inf_media/downloads/forschung/technical_reports_und_preprints/2014/02_2014.pdf\">Cointegration Analysis\n",
-    "of Financial Time Series Data by Johannes Steffen, Pascal Held and Rudolf Kruse, 2014</a>  Pairs trading with Foreign Exchance (FX)\n",
+    "of Financial Time Series Data by Johannes Steffen, Pascal Held and Rudolf Kruse, 2014</a>\n",
+    "</p>\n",
+    "<p>\n",
+    "Pairs trading in the Foreign Exchance (FX) market.\n",
+    "</p>\n",
     "</li>\n",
     "</ol>"
    ]
